src/components/Providers/ThemeProvider/ThemeProvider.css
/* ... */
/** Deprecated fallbacks **/
.ThemeProvider {
    --znui-background: var(--znui-surface);
    --znui-on-background: var(--znui-on-surface);
    --znui-surface-variant: var(--znui-surface-container-highest)
}


.ThemeProvider {
    -webkit-tap-highlight-color: transparent;

    font-family: 'Roboto';
    --emphasized-decelerate-motion: cubic-bezier(0.3, 0.0, 0.8, 0.15);
    --emphasized-motion: cubic-bezier(1, 0, 0.25, 0.82);
}

/*effect style*/
.ThemeProvider .elevation-1 {
    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.3);
}

.ThemeProvider .elevation-2 {
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.3);
}

.ThemeProvider .elevation-3 {
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3), 0 4px 8px rgba(0, 0, 0, 0.2);
}

.ThemeProvider .elevation-4 {
    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3), 0 6px 10px rgba(0, 0, 0, 0.2);
}

.ThemeProvider .elevation-5 {
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3), 0 8px 12px rgba(0, 0, 0, 0.2);
}

.ThemeProvider[data-theme='dark'] .elevation-1 {
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3), 0 3px 3px rgba(0, 0, 0, 0.2);
}

.ThemeProvider[data-theme='dark'] .elevation-2 {
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3), 0 6px 6px rgba(0, 0, 0, 0.2);
}

.ThemeProvider[data-theme='dark'] .elevation-3 {
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3), 0 4px 8px rgba(0, 0, 0, 0.2);
}

.ThemeProvider[data-theme='dark'] .elevation-4 {
    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3), 0 6px 10px rgba(0, 0, 0, 0.2);
}

.ThemeProvider[data-theme='dark'] .elevation-5 {
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3), 0 8px 12px rgba(0, 0, 0, 0.2);
}

/**
 * Scrollbar
 * For WebKit Specific
 */
.ThemeProvider ::-webkit-scrollbar {
    width: 0px;
}

.ThemeProvider ::-webkit-scrollbar-track {
    background: transparent;
}

.ThemeProvider * {
    scrollbar-gutter: stable;
}

.ThemeProvider ::-webkit-scrollbar-thumb {
    background: var(--znui-scrollbar-thumb);
}

